PROJECT( ida-llvm )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules )

FIND_PACKAGE( IDA )


INCLUDE_DIRECTORIES( ${IDA_INCLUDE_DIRECTORIES} )


SET( SOURCE_FILES
    "src/plugin_main.cpp" )

ADD_LIBRARY( ida-llvm MODULE ${SOURCE_FILES} )
SET_TARGET_PROPERTIES( 
    ida-llvm
    PROPERTIES
    PREFIX ""
    SUFFIX "${IDA_PLUGIN_SUFFIX}"
    OUTPUT_NAME ida-llvm )
TARGET_LINK_LIBRARIES( ida-llvm ${IDA_LIBRARIES} ) 

INSTALL( 
    TARGETS ida-llvm
    DESTINATION "${IDA_DIRECTORY}/plugins" )

